Styled Dropdown button to look like prototype design, and fixed an issue with overflow

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -7,6 +7,8 @@ Desktop First Approach
 body{
     @apply bg-white text-black;
     font-family: "Poppins", sans-serif;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 h1,h2,h3,h5{
